this is the original

--- a/package.json
+++ b/package.json
@@ -1,33 +1,67 @@
 {
-  "name": "node-dbf",
-  "version": "0.2.1",
-  "engines": {
-    "node": ">=0.11.0"
+  "_from": "node-dbf@",
+  "_id": "node-dbf@0.2.1",
+  "_inBundle": false,
+  "_integrity": "sha1-EK1Gbrinf0MBaKTtMLBrcoRYpvY=",
+  "_location": "/node-dbf",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "node-dbf@",
+    "name": "node-dbf",
+    "escapedName": "node-dbf",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
-  "description": "An efficient dBase DBF file parser written in pure JavaScript",
-  "main": "./lib/parser.js",
-  "bin": "./bin/node-dbf.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/abstractvector/node-dbf.git"
-  },
-  "keywords": [
-    "dBase",
-    "dbf"
+  "_requiredBy": [
+    "/"
   ],
-  "author": "Matt Knight <abstractvector@users.noreply.github.com>",
-  "license": "MIT",
+  "_resolved": "https://registry.npmjs.org/node-dbf/-/node-dbf-0.2.1.tgz",
+  "_shasum": "10ad466eb8a77f430168a4ed30b06b728458a6f6",
+  "_spec": "node-dbf@",
+  "_where": "/home/jacobl/DealerSite/seaway_dealer_site",
+  "author": {
+    "name": "Matt Knight",
+    "email": "abstractvector@users.noreply.github.com"
+  },
+  "bin": {
+    "node-dbf": "./bin/node-dbf.js"
+  },
+  "bugs": {
+    "url": "https://github.com/abstractvector/node-dbf/issues"
+  },
+  "bundleDependencies": false,
+  "dependencies": {
+    "commander": "^2.9.0"
+  },
+  "deprecated": false,
+  "description": "An efficient dBase DBF file parser written in pure JavaScript",
   "devDependencies": {
     "chai": "*",
     "coffee-script": "*",
     "mocha": "*"
   },
-  "dependencies": {
-    "commander": "^2.9.0"
+  "engines": {
+    "node": ">=0.11.0"
+  },
+  "homepage": "https://github.com/abstractvector/node-dbf#readme",
+  "keywords": [
+    "dBase",
+    "dbf"
+  ],
+  "license": "MIT",
+  "main": "./lib/parser.js",
+  "name": "node-dbf",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/abstractvector/node-dbf.git"
   },
   "scripts": {
     "build": "cake build",
     "prepublish": "npm run build",
     "test": "npm run build && mocha"
-  }
+  },
+  "version": "0.2.1"
 }
